python/testData/quickFixes/PyAddImportQuickFixTest/betweenImportsAboveNoInspectionComment/main.py
import a
#noinspection PyUnresolvedReferences
from c import no_so


print(a)
<error descr="Unresolved reference 'b'"><caret>b</error>